# Graph_filesystem

./: CMakeLists.txt  HOW_TO_CREATE_PLUGIN.md  README.md  main.cpp
Controller/: CMakeLists.txt
Controller/Terminal/: CMakeLists.txt  terminal.cpp  terminal.hpp
Model/: CMakeLists.txt
Model/AccessManager/: accessManager.cpp  accessManager.hpp
Model/Commands/: CMakeLists.txt
Model/Commands/CommandManager/: commandManager.cpp  commandManager.hpp
Model/Commands/impl/include/: DirectoryCommands.hpp  FileCommands.hpp  RegularFileCommands.hpp  commands.hpp
Model/Commands/impl/src/: DirectoryCommands.cpp  FileCommands.cpp  RegularFileCommands.cpp  commands.cpp
Model/Commands/interface/: command.hpp  rootCommand.hpp
Model/Filesystem/: CMakeLists.txt  filesys.cpp  filesys.hpp  structs.hpp
Model/Filesystem/Files/: files.cpp  files.hpp
Model/PluginHandler/: CMakeLists.txt  pluginLoader.cpp  pluginLoader.hpp  pluginParser.hpp
Model/Tests/: CMakeLists.txt  accessManager_test.cpp  commandManager_test.cpp  command_test.cpp  directoryCommands_test.cpp  fileCommands_test.cpp  files_test.cpp  filesys_test.cpp  pluginLoader_test.cpp  regularFileCommands_test.cpp
STL/: CMakeLists.txt  iterator.hpp  iterator.tpp  table.hpp  table.tpp
STL/TESTS/: CapacityTests.cpp  ElementAccessTests.cpp  ElseTests.cpp  IteratorsTests.cpp  LookUpTests.cpp  ModifiersTests.cpp  ObserversTests.cpp  constructorsTests.cpp
View/: CMakeLists.txt  ViewModel.cpp  ViewModel.hpp
View/Shaders/: back.cpp  back.hpp  shader.cpp  shader.hpp
View/dialogs/: NameDialog.cpp  NameDialog.hpp  OutputDialog.cpp  OutputDialog.hpp  TerminalDialog.cpp  TerminalDialog.hpp
View/graph/: GraphEdge.cpp  GraphEdge.hpp  GraphNode.cpp  GraphNode.hpp  GraphView.cpp  GraphView.hpp  PhysicsNode.cpp  PhysicsNode.hpp
View/menu/: CircularMenu.cpp  CircularMenu.hpp
cFind/: CMakeLists.txt  dataRace.cpp  dataRace.hpp  replace_plugin.cpp  replace_plugin.hpp  tests.cpp
include/: filesystem_for_plugin.hpp
pluginExample/: CMakeLists.txt  plugin.cpp  plugin.hpp
